# mitre-ectf2021

./: .gitignore  Makefile
controller/: Makefile
controller/scewl-rust/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
controller/scewl-rust/.cargo/: config
controller/scewl-rust/src/: auth.rs  controller.rs  crypto.rs  cursor.rs  interface.rs  lib.rs  main.rs
controller/scewl-rust/src/secure/: auth.rs  crypto.rs  mod.rs  test_auth.rs
controller/scewl-rust/src/trivial/: auth.rs  crypto.rs  mod.rs
cpu/seds/echo_testing_client/: Makefile  scewl_bus_driver.c
dockerfiles/: 1a_create_sss.Dockerfile  1b_create_controller_base.Dockerfile  2b_create_sed_secrets.Dockerfile  2c_build_controller.Dockerfile  3_remove_sed.Dockerfile
sss/: sss.py
tools/: deploy_32_echo.sh  deploy_echo_gdb.sh  deploy_echo_leave.sh  launch_sed.sh
