[package]
authors = ["Addison Crump <me@addisoncrump.info>"]
edition = "2018"
readme = "README.md"
name = "controller"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = { version = "0.3.7", optional = true }
cty = "0.2.1"
lm3s6965 = "0.1.3"
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.6", optional = true }
volatile-register = "0.2.0"

[build-dependencies]
bindgen = "0.57"

# this lets you use `cargo fix`!
[[bin]]
name = "controller"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
semihosted = ["cortex-m-semihosting", "panic-semihosting"]
default = ["panic-halt"]