[package]
authors = ["Addison Crump <me@addisoncrump.info>"]
edition = "2018"
readme = "README.md"
license = "MIT"
name = "controller"
version = "0.1.0"

[dependencies]
aes = "0.6.0"
block-modes = { version = "0.7.0", default-features = false }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = { version = "0.3.7", optional = true }
cty = "0.2.1"
lm3s6965 = "0.1.3"
num = { version = "0.4.0", default-features = false }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.6", optional = true }
rand = { version = "0.8.3", default-features = false }
rand_hc = "0.3.0"
volatile-register = "0.2.0"
byteorder = { version = "1.4.3", default-features = false }

[[bin]]
name = "controller"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
semihosted = ["cortex-m-semihosting", "panic-semihosting"]
default = ["panic-halt"]

