[package]
authors = ["CaptureTheFlaggies"]
edition = "2018"
readme = "README.md"
license = "MIT"
name = "controller"
version = "0.1.0"

[dependencies]
aes = "0.6.0"
block-modes = { version = "0.7.0", default-features = false }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = { version = "0.3.7", optional = true }
heapless = "0.6.1"
hmac = { version = "0.10.1", default-features = false }
lm3s6965 = "0.1.3"
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.6", optional = true }
rand_core = "0.6.2"
rand_hc = "0.3.0"
sha2 = { version = "0.9.3", default-features = false }
volatile-register = "0.2.0"

[[bin]]
name = "controller"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
semihosted = ["cortex-m-semihosting", "panic-semihosting"]
default = ["panic-halt"]

